2004-08-04  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Bump version
	  Add AssemblyInfo.cs
	* sample/AssemblyInfo.cs.in: Added
	* sample/sample.cs: Cleaned up a bit
	* sample/CanvasClock.cs: Added IntPtr ctor
	* sample/CanvasClock.cs: Removed RegisterGType, not needed anymore
	* sample/CanvasFigure.cs: Ditto
	* sample/CanvasTextBox.cs: Ditto
	* NEWS: Updated with new customizing feature

2004-08-03  Mario Fuentes  <mario@gnome.cl>

	* dia/CanvasItem.custom: Change return type in delegate 'ShapeValueDelegate'
	  and method 'ShapeValue_Callback' from Shape to IntPtr, for fixed bug
	  produced when method ShapeValueFunc are override.
	* sample/CanvasClock.cs: Added a custom item.
	* sample/sample.cs: Added a Clock item.
	* sample/makefile.am: Added CanvasClock.cs.

2004-08-01  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/glue/dia-canvas-line.c: Added, more than one dash, test code.
	  Changed signature to only specify one dash size.
	* dia/CanvasLine.custom: Ditto
	* dia/DashStyle.cs: Ditto
	* TODO: Maybe remove DashStyle if support for more than one
	  dashstyle is far out in the future.
	* sample/CanvasTextBox.cs: Make text fit
	* sample/sample.cs: Ditto
	* dia/CanvasItem.custom: Added Mario Fuentes work on extending
	  CanvasItem's
	* dia/glue/dia-canvas-item.c: Ditto

2004-07-28  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* dia/Dia.metadata: Use /api/namespace like gtk#

2004-07-15  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* COPYING: Changed from GNU GPL to GNU LGPL
	* configure.in: Bump version to 0.4.1
	* NEWS: Added license change
	* dia/*.cs: Ditto
	* dia/*.custom: Ditto
	* sample/*.cs: Ditto

2004-07-14  Martin Willemoes Hansen  <mwh@sysrq.dk>

	* configure.in: Moved glue makefile
	  Added diacanvas-sharp.pc
	  Added diacanvas-sharp-sample
	  Added AssemblyInfo.cs
	  Check for GAC
	  Check for Mono or .NET
	* diacanvas-sharp.pc.in: Added
	* makefile.am: Removed glue dir
	* NEWS: Updated
	* dia/AssemblyInfo.cs.in: Added